--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EV vs Gas Car Savings Calculator</title>
+    <title>Kalkulator Oszczędności EV vs Samochód Spalinowy</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -54,56 +54,56 @@
 </head>
 <body>
 
-    <h1>EV vs Gas Car Savings Calculator</h1>
+    <h1>Kalkulator Oszczędności EV vs Samochód Spalinowy</h1>
     <div class="container">
         <div class="input-field">
-            <label for="electricityCost">Electricity Cost per kWh ($):</label>
-            <input type="number" id="electricityCost" placeholder="e.g., 0.12" step="0.01">
+            <label for="electricityCost">Koszt energii elektrycznej (zł za kWh):</label>
+            <input type="number" id="electricityCost" placeholder="np. 0.70" step="0.01">
         </div>
         <div class="input-field">
-            <label for="evEfficiency">EV Efficiency (miles per kWh):</label>
-            <input type="number" id="evEfficiency" placeholder="e.g., 4.0" step="0.1">
+            <label for="evEfficiency">Efektywność EV (km na kWh):</label>
+            <input type="number" id="evEfficiency" placeholder="np. 6.0" step="0.1">
         </div>
         <div class="input-field">
-            <label for="gasPrice">Gas Price per Gallon ($):</label>
-            <input type="number" id="gasPrice" placeholder="e.g., 3.50" step="0.01">
+            <label for="gasPrice">Cena paliwa (zł za litr):</label>
+            <input type="number" id="gasPrice" placeholder="np. 6.50" step="0.01">
         </div>
         <div class="input-field">
-            <label for="carEfficiency">Car Efficiency (miles per gallon):</label>
-            <input type="number" id="carEfficiency" placeholder="e.g., 25" step="0.1">
+            <label for="carEfficiency">Efektywność samochodu spalinowego (km na litr):</label>
+            <input type="number" id="carEfficiency" placeholder="np. 15" step="0.1">
         </div>
         <div class="input-field">
-            <label for="milesDriven">Miles Driven:</label>
-            <input type="number" id="milesDriven" placeholder="e.g., 1000">
+            <label for="kmDriven">Przejechane kilometry:</label>
+            <input type="number" id="kmDriven" placeholder="np. 1000">
         </div>
-        <button onclick="calculateSavings()">Calculate Savings</button>
+        <button onclick="calculateSavings()">Oblicz oszczędności</button>
     </div>
 
     <div class="result" id="result"></div>
 
     <script>
         function calculateSavings() {
-            // Get the user inputs
+            // Pobranie wartości wprowadzonych przez użytkownika
             const electricityCost = parseFloat(document.getElementById('electricityCost').value);
             const evEfficiency = parseFloat(document.getElementById('evEfficiency').value);
             const gasPrice = parseFloat(document.getElementById('gasPrice').value);
             const carEfficiency = parseFloat(document.getElementById('carEfficiency').value);
-            const milesDriven = parseFloat(document.getElementById('milesDriven').value);
+            const kmDriven = parseFloat(document.getElementById('kmDriven').value);
 
-            // Calculate EV cost
-            const evCost = (milesDriven / evEfficiency) * electricityCost;
+            // Obliczenie kosztu dla EV
+            const evCost = (kmDriven / evEfficiency) * electricityCost;
 
-            // Calculate Gas Car cost
-            const gasCarCost = (milesDriven / carEfficiency) * gasPrice;
+            // Obliczenie kosztu dla samochodu spalinowego
+            const gasCarCost = (kmDriven / carEfficiency) * gasPrice;
 
-            // Calculate savings
+            // Obliczenie oszczędności
             const savings = gasCarCost - evCost;
 
-            // Display the result
+            // Wyświetlenie wyników
             document.getElementById('result').innerHTML = `
-                <p>EV Cost: $${evCost.toFixed(2)}</p>
-                <p>Gas Car Cost: $${gasCarCost.toFixed(2)}</p>
-                <p><strong>Savings: $${savings.toFixed(2)}</strong></p>
+                <p>Koszt jazdy EV: ${evCost.toFixed(2)} zł</p>
+                <p>Koszt jazdy samochodem spalinowym: ${gasCarCost.toFixed(2)} zł</p>
+                <p><strong>Oszczędności: ${savings.toFixed(2)} zł</strong></p>
             `;
         }
     </script>
