--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalkulator Oszczędności EV vs Samochód Spalinowy</title>
+    <title>Kalkulator Oszczędności Samochodu Elektrycznego vs Samochodu Spalinowego</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -55,18 +55,21 @@
             font-size: 1.2em;
             font-weight: bold;
         }
+        .hidden {
+            display: none;
+        }
     </style>
 </head>
 <body>
 
-    <h1>Kalkulator Oszczędności EV vs Samochód Spalinowy</h1>
+    <h1>Kalkulator Oszczędności Samochodu Elektrycznego vs Spalinowego</h1>
     <div class="container">
         <div class="input-field">
             <label for="electricityCost">Koszt energii elektrycznej (zł za kWh):</label>
             <input type="number" id="electricityCost" placeholder="np. 0.70" step="0.01">
         </div>
         <div class="input-field">
-            <label for="evEfficiency">Efektywność EV (km na kWh):</label>
+            <label for="evEfficiency">Efektywność samochodu elektrycznego (km na kWh):</label>
             <input type="number" id="evEfficiency" placeholder="np. 6.0" step="0.1">
         </div>
         <div class="input-field">
@@ -78,15 +81,45 @@
             <input type="number" id="carEfficiency" placeholder="np. 15" step="0.1">
         </div>
         <div class="input-field">
-            <label for="kmDriven">Przejechane kilometry:</label>
-            <input type="number" id="kmDriven" placeholder="np. 1000">
+            <label for="kmDriven">Przejechane kilometry rocznie:</label>
+            <input type="number" id="kmDriven" placeholder="np. 15000">
         </div>
+
+        <!-- Checkbox to show/hide payback fields -->
+        <div class="input-field">
+            <label>
+                <input type="checkbox" id="paybackToggle" onclick="togglePaybackFields()"> Uwzględnij obliczanie okresu zwrotu kosztów zakupu
+            </label>
+        </div>
+
+        <!-- Hidden fields for payback calculation -->
+        <div id="paybackFields" class="hidden">
+            <div class="input-field">
+                <label for="evCost">Cena samochodu elektrycznego (zł):</label>
+                <input type="number" id="evCost" placeholder="np. 150000">
+            </div>
+            <div class="input-field">
+                <label for="gasCarCost">Cena samochodu spalinowego (zł):</label>
+                <input type="number" id="gasCarCost" placeholder="np. 100000">
+            </div>
+        </div>
+
         <button onclick="calculateSavings()">Oblicz oszczędności</button>
     </div>
 
     <div class="result" id="result"></div>
 
     <script>
+        function togglePaybackFields() {
+            // Toggle visibility of payback-related fields
+            const paybackFields = document.getElementById('paybackFields');
+            if (document.getElementById('paybackToggle').checked) {
+                paybackFields.classList.remove('hidden');
+            } else {
+                paybackFields.classList.add('hidden');
+            }
+        }
+
         function calculateSavings() {
             // Pobranie wartości wprowadzonych przez użytkownika
             const electricityCost = parseFloat(document.getElementById('electricityCost').value);
@@ -95,29 +128,53 @@
             const carEfficiency = parseFloat(document.getElementById('carEfficiency').value);
             const kmDriven = parseFloat(document.getElementById('kmDriven').value);
 
-            // Obliczenie kosztu dla EV
-            const evCost = (kmDriven / evEfficiency) * electricityCost;
+            // Obliczenie kosztu dla samochodu elektrycznego
+            const evCostPerKm = (1 / evEfficiency) * electricityCost;
+            const evTotalCost = evCostPerKm * kmDriven;
 
             // Obliczenie kosztu dla samochodu spalinowego
-            const gasCarCost = (kmDriven / carEfficiency) * gasPrice;
+            const gasCarCostPerKm = (1 / carEfficiency) * gasPrice;
+            const gasCarTotalCost = gasCarCostPerKm * kmDriven;
 
-            // Obliczenie oszczędności
-            const savings = gasCarCost - evCost;
+            // Obliczenie oszczędności rocznych
+            const annualSavings = gasCarTotalCost - evTotalCost;
 
-            // Wyświetlenie wyników
+            // Wyświetlenie wyników bez okresu zwrotu
             let savingsMessage = '';
-            if (savings > 0) {
-                savingsMessage = `Jazda pojazdem elektrycznym pozwala zaoszczędzić ${savings.toFixed(2)} zł w porównaniu z samochodem spalinowym.`;
-            } else if (savings < 0) {
-                savingsMessage = `Jazda samochodem spalinowym jest tańsza o ${Math.abs(savings).toFixed(2)} zł w porównaniu z pojazdem elektrycznym.`;
+            if (annualSavings > 0) {
+                savingsMessage = `Jazda samochodem elektrycznym pozwala zaoszczędzić ${annualSavings.toFixed(2)} zł rocznie w porównaniu z samochodem spalinowym.`;
+            } else if (annualSavings < 0) {
+                savingsMessage = `Jazda samochodem spalinowym jest tańsza o ${Math.abs(annualSavings).toFixed(2)} zł rocznie w porównaniu z elektrycznym.`;
             } else {
-                savingsMessage = `Koszty jazdy pojazdem elektrycznym i samochodem spalinowym są identyczne.`;
+                savingsMessage = `Koszty jazdy samochodem elektrycznym i spalinowym są identyczne.`;
+            }
+
+            // Obliczanie okresu zwrotu, jeśli opcja jest włączona
+            let paybackMessage = '';
+            if (document.getElementById('paybackToggle').checked) {
+                const evCost = parseFloat(document.getElementById('evCost').value);
+                const gasCarCost = parseFloat(document.getElementById('gasCarCost').value);
+
+                if (isNaN(evCost) || isNaN(gasCarCost)) {
+                    paybackMessage = 'Podaj ceny samochodów, aby obliczyć okres zwrotu.';
+                } else {
+                    const priceDifference = evCost - gasCarCost;
+
+                    // Sprawdzamy, czy okres zwrotu jest sensowny
+                    if (annualSavings > 0 && priceDifference > 0) {
+                        const paybackPeriod = priceDifference / annualSavings;
+                        paybackMessage = `Zwrócenie kosztów zakupu samochodu elektrycznego nastąpi po ${paybackPeriod.toFixed(1)} latach.`;
+                    } else {
+                        paybackMessage = 'Oszczędności nie pokryją różnicy w cenie zakupu samochodów.';
+                    }
+                }
             }
 
             document.getElementById('result').innerHTML = `
-                <p>Koszt jazdy EV: ${evCost.toFixed(2)} zł</p>
-                <p>Koszt jazdy samochodem spalinowym: ${gasCarCost.toFixed(2)} zł</p>
+                <p>Koszt jazdy samochodem elektrycznym: ${evTotalCost.toFixed(2)} zł rocznie</p>
+                <p>Koszt jazdy samochodem spalinowym: ${gasCarTotalCost.toFixed(2)} zł rocznie</p>
                 <div class="savings-msg">${savingsMessage}</div>
+                <div class="savings-msg">${paybackMessage}</div>
             `;
         }
     </script>
