--- a/index.html
+++ b/index.html
@@ -3,113 +3,146 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalkulator Oszczędności Samochodu Elektrycznego vs Samochodu Spalinowego</title>
+    <title>Kalkulator Oszczędności Samochodu Elektrycznego</title>
     <style>
+        /* General styling */
         body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            max-width: 600px;
+            font-family: 'Helvetica Neue', Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: url('background.jpg') no-repeat center center fixed;
+            background-size: cover;
+            color: #333;
         }
         h1 {
             text-align: center;
+            color: white;
+            margin-top: 20px;
+            font-size: 2.5em;
         }
         .container {
-            padding: 10px;
-            background-color: #f4f4f4;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .input-field {
-            margin-bottom: 10px;
+            background-color: rgba(255, 255, 255, 0.9);
+            margin: 30px auto;
+            padding: 20px;
+            border-radius: 15px;
+            max-width: 700px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
         label {
             display: block;
-            margin-bottom: 5px;
+            margin-bottom: 8px;
+            font-weight: bold;
         }
         input {
             width: 100%;
-            padding: 8px;
-            margin: 5px 0 15px;
-            border-radius: 4px;
-            border: 1px solid #ccc;
+            padding: 12px;
+            border-radius: 8px;
+            border: 1px solid #ddd;
+            margin-bottom: 20px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
         button {
             width: 100%;
-            padding: 10px;
+            padding: 15px;
             background-color: #4CAF50;
             color: white;
             border: none;
-            border-radius: 5px;
+            border-radius: 8px;
+            font-size: 1.2em;
             cursor: pointer;
+            transition: background-color 0.3s ease;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
         button:hover {
             background-color: #45a049;
         }
         .result {
-            margin-top: 20px;
-            font-size: 1.2em;
+            margin-top: 30px;
+            font-size: 1.4em;
             text-align: center;
+            color: #333;
         }
         .savings-msg {
             margin-top: 10px;
-            font-size: 1.2em;
             font-weight: bold;
+        }
+        /* Payback toggle styling */
+        #paybackToggle {
+            margin-right: 10px;
+            transform: scale(1.5);
+        }
+        .input-field {
+            margin-bottom: 20px;
         }
         .hidden {
             display: none;
         }
+
+        /* Media Queries for Mobile Responsiveness */
+        @media (max-width: 768px) {
+            .container {
+                margin: 20px;
+                padding: 15px;
+            }
+            h1 {
+                font-size: 2em;
+            }
+        }
+
+    
     </style>
 </head>
 <body>
 
-    <h1>Kalkulator Oszczędności Samochodu Elektrycznego vs Spalinowego</h1>
-    <div class="container">
-        <div class="input-field">
-            <label for="electricityCost">Koszt energii elektrycznej (zł za kWh):</label>
-            <input type="number" id="electricityCost" placeholder="np. 0.70" step="0.01">
-        </div>
-        <div class="input-field">
-            <label for="evEfficiency">Efektywność samochodu elektrycznego (km na kWh):</label>
-            <input type="number" id="evEfficiency" placeholder="np. 6.0" step="0.1">
-        </div>
-        <div class="input-field">
-            <label for="gasPrice">Cena paliwa (zł za litr):</label>
-            <input type="number" id="gasPrice" placeholder="np. 6.50" step="0.01">
-        </div>
-        <div class="input-field">
-            <label for="carEfficiency">Efektywność samochodu spalinowego (km na litr):</label>
-            <input type="number" id="carEfficiency" placeholder="np. 15" step="0.1">
-        </div>
-        <div class="input-field">
-            <label for="kmDriven">Przejechane kilometry rocznie:</label>
-            <input type="number" id="kmDriven" placeholder="np. 15000">
-        </div>
-
-        <!-- Checkbox to show/hide payback fields -->
-        <div class="input-field">
-            <label>
-                <input type="checkbox" id="paybackToggle" onclick="togglePaybackFields()"> Uwzględnij obliczanie okresu zwrotu kosztów zakupu
-            </label>
-        </div>
-
-        <!-- Hidden fields for payback calculation -->
-        <div id="paybackFields" class="hidden">
-            <div class="input-field">
-                <label for="evCost">Cena samochodu elektrycznego (zł):</label>
-                <input type="number" id="evCost" placeholder="np. 150000">
-            </div>
-            <div class="input-field">
-                <label for="gasCarCost">Cena samochodu spalinowego (zł):</label>
-                <input type="number" id="gasCarCost" placeholder="np. 100000">
-            </div>
-        </div>
-
-        <button onclick="calculateSavings()">Oblicz oszczędności</button>
+<h1>Kalkulator Oszczędności Samochodu Elektrycznego</h1>
+<div class="container">
+    <div class="input-field">
+        <label for="electricityCost">Koszt energii elektrycznej (zł za kWh):</label>
+        <input type="number" id="electricityCost" placeholder="np. 0.70" step="0.01">
+    </div>
+    <div class="input-field">
+        <label for="evEfficiency">Efektywność samochodu elektrycznego (km na kWh):</label>
+        <input type="number" id="evEfficiency" placeholder="np. 6.0" step="0.1">
+    </div>
+    <div class="input-field">
+        <label for="gasPrice">Cena paliwa (zł za litr):</label>
+        <input type="number" id="gasPrice" placeholder="np. 6.50" step="0.01">
+    </div>
+    <div class="input-field">
+        <label for="carEfficiency">Efektywność samochodu spalinowego (km na litr):</label>
+        <input type="number" id="carEfficiency" placeholder="np. 15" step="0.1">
+    </div>
+    <div class="input-field">
+        <label for="kmDriven">Przejechane kilometry rocznie:</label>
+        <input type="number" id="kmDriven" placeholder="np. 15000">
     </div>
 
-    <div class="result" id="result"></div>
+    <!-- Checkbox to show/hide payback fields -->
+    <div class="input-field">
+        <label>
+            <input type="checkbox" id="paybackToggle" onclick="togglePaybackFields()"> Uwzględnij obliczanie okresu
+            zwrotu kosztów zakupu
+        </label>
+    </div>
 
-    <script>
+    <!-- Hidden fields for payback calculation -->
+    <div id="paybackFields" class="hidden">
+        <div class="input-field">
+            <label for="evCost">Cena samochodu elektrycznego (zł):</label>
+            <input type="number" id="evCost" placeholder="np. 150000">
+        </div>
+        <div class="input-field">
+            <label for="gasCarCost">Cena samochodu spalinowego (zł):</label>
+            <input type="number" id="gasCarCost" placeholder="np. 100000">
+        </div>
+    </div>
+
+    <button onclick="calculateSavings()">Oblicz oszczędności</button>
+</div>
+
+<div class="result" id="result"></div>
+
+<script>
         function togglePaybackFields() {
             // Toggle visibility of payback-related fields
             const paybackFields = document.getElementById('paybackFields');
@@ -177,7 +210,9 @@
                 <div class="savings-msg">${paybackMessage}</div>
             `;
         }
-    </script>
+
+
+</script>
 
 </body>
 </html>
